Final styling update (#320)
* some styling added so that carousel indicators are positioned higher

* link to the User Manual added

* link to the User Manual added to the help page

* esa logo added, some refinement done on the main page

* information on EODC removed, some styling adjusted

* non-scrolable class moved to global styling

* about page updated

* terms page updated

* title updated, angular icon removed

* some information updated; styling links updated

* some colors updated

* buttons color updated

* validate button styled

* help page updated

* dot added so that selector refers to a class

* icons styled

* add and remove buttons styled

* clear coordinates button styled

* some vertical alignment done

* centering p-panel title on the validation page done

* validate page components made slightly smaller

* adjusting position of the header title

* left side labels added to spatial subsetting

* bootstrap tcol metric added with all needed conditions

* validation config updated with bootstrap tcol

* bootstrap tcol id updated

* validationrun dto updated

* information of bootstraping tcol added to the result summary

* some styling of spatial subsetting field done

* class label moved to global styling file

* some spatial subsetting component styling improved

* validation period component styled, so it looks more like the one on the current prod instance

* tool tips added to the lover left and upper right labels

* class label changed name to small-label to avoid using the same name for different classes

* anomalies component styled, so it looks like the current one

* scaling component styling done

* naming validation field styled

* validation page fixed for no validations available

* validation page rewritten so it uses p-grid class

* some code refinement done

* styling updated

* sorting form styled

* column width changed

* some padding added


--- a/UI/src/app/modules/anomalies/components/anomalies/anomalies.component.html
+++ b/UI/src/app/modules/anomalies/components/anomalies/anomalies.component.html
@@ -1,4 +1,4 @@
-<p-panel header="Anomalies" [toggleable]="true">
+<p-panel header="Anomalies" [toggleable]="true" class="validation-row">
   <ng-template pTemplate="icons">
     <label class="p-panel-header-icon"
            pTooltip="Optionally calculates metrics from anomalies instead of absolute values. First, a climatology is computed using the chosen method and time period (only whole years are used), then the anomalies are calculated based on this. &quot;35 day moving average&quot; means that the climatology is calculated as a moving average of the data; &quot;climatology&quot; means that the average for each day of the year is calculated."
@@ -6,19 +6,27 @@
       <span class="pi pi-question-circle"></span>
     </label>
   </ng-template>
-  <div class="p-grid">
-    <div class="p-col-12">
-      <div class="p-float-label p-m-2">
-        <p-dropdown id="anomaliesMethodSelector"
-                    [options]="availableAnomalyMethodModels"
-                    [ngModel]="selectedMethod$|async"
-                    (ngModelChange)="selectedMethod$.next($event)"
-                    optionLabel="description"></p-dropdown>
-        <label for="anomaliesMethodSelector">Method</label>
+  <div class="p-grid p-pt-4" style="justify-content: center">
+    <div class="p-col-12 p-sm-4">
+      <div class="p-grid" id="method">
+        <div class="small-label p-col-4">
+          <div class="p-fluid">
+            <div>Method</div>
+          </div>
+        </div>
+        <div class="p-col-7 p-px-0">
+          <div class="p-float-label">
+            <p-dropdown id="anomaliesMethodSelector"
+                        [options]="availableAnomalyMethodModels"
+                        [ngModel]="selectedMethod$|async"
+                        (ngModelChange)="selectedMethod$.next($event)"
+                        optionLabel="description"></p-dropdown>
+            <label for="anomaliesMethodSelector">Select</label>
+          </div>
+        </div>
       </div>
     </div>
-
-    <div class="p-col-12 p-sm-6">
+    <div class="p-col-12 p-sm-8">
       <qa-anom-climatology *ngIf="((selectedMethod$|async).method$|async)==anomaliesClimatology"
                            [anomaliesModel]="anomaliesModel"></qa-anom-climatology>
     </div>
