--- a/UI/src/app/pages/help/help.component.html
+++ b/UI/src/app/pages/help/help.component.html
@@ -8,6 +8,15 @@
     <a pageScroll [pageScrollDuration]="1" href="#published">Published Validations Page</a><br/>
   </p>
 
+  <a id="manual"></a>
+  <h1 class="h3 mb-3 font-weight-normal">User Manual</h1>
+  <p>
+    This page contains a quick user tutorial. More comprehensive information can be found in our
+    <a target="_blank"
+       href="https://www.geo.tuwien.ac.at/media/filer_public/15/6c/156cd163-cd29-4dd3-a132-820bcb653817/frm4sm_dt3-1_qa4sm_sum_v11.pdf">User
+      Manual</a>.
+  </p>
+
   <h1 id="validation" class="h3 p-mb-3 font-weight-normal">Validate Page</h1>
 
   <p>
@@ -291,7 +300,8 @@
     </li>
     <li>
       <span class="pi pi-book"></span> <span class="font-weight-bold"> Publish</span> will publish the result NetCDF
-      file to <a target="_blank" href="https://zenodo.org/" rel="'noreferrer">Zenodo</a>. This means the results can be cited
+      file to <a target="_blank" href="https://zenodo.org/" rel="'noreferrer">Zenodo</a>. This means the results can be
+      cited
       with a <a target="_blank" href="https://www.doi.org/" rel="'noreferrer">DOI</a>. See section
       <a pageScroll [pageScrollDuration]="1" href="#publication">Publication</a> for details.
     </li>
@@ -385,7 +395,8 @@
     map can be selected with the drop-down button on the right.
     <br/>
     You can also download a zipfile of all the plots in png and svg (vector) format by clicking on the <i>Download all
-    graphs</i> button, and the result <a target="_blank" href="https://www.unidata.ucar.edu/software/netcdf/" rel="'noreferrer">NetCDF</a>
+    graphs</i> button, and the result <a target="_blank" href="https://www.unidata.ucar.edu/software/netcdf/"
+                                         rel="'noreferrer">NetCDF</a>
     file
     with all metrics with the <i>Download results in NetCDF</i> button.<br/>
   </p>
@@ -398,8 +409,10 @@
 
   <p>
     This feature allows you to publish the result NetCDF file of your validation to
-    <a target="_blank" href="https://zenodo.org/" rel="noreferrer">Zenodo</a> under your own name but without creating your own
-    Zenodo account. This gives you a <a target="_blank" href="https://www.doi.org/" rel="noreferrer">DOI</a> for your results,
+    <a target="_blank" href="https://zenodo.org/" rel="noreferrer">Zenodo</a> under your own name but without creating
+    your own
+    Zenodo account. This gives you a <a target="_blank" href="https://www.doi.org/" rel="noreferrer">DOI</a> for your
+    results,
     which you can cite in your publications to give your readers open access to your data.
   </p>
   <div>
@@ -428,7 +441,8 @@
     project but with your name as the author. Zenodo is a separate website run at CERN over which the QA4SM team
     has no control.<br/>
     <span class="font-weight-bold">Assigning a DOI to a result also means that it cannot easily be unpublished or
-        deleted - see also <a href="https://help.zenodo.org/" target="_blank" rel="noreferrer">Zenodo's FAQ</a>.</span><br/>
+        deleted - see also <a href="https://help.zenodo.org/" target="_blank"
+                              rel="noreferrer">Zenodo's FAQ</a>.</span><br/>
 
     If you prefer to use your own Zenodo account, you can of course do so - the QA4SM publication feature is just
     for convenience. Just download the NetCDF result file and upload it yourself through Zenodo's submission process
@@ -442,7 +456,8 @@
 
   <p>
     The list shows validations on the QA4SM service that have been published to
-    <a target="_blank" href="https://zenodo.org/" rel="noreferrer">Zenodo</a> by their owners. This means the results can be cited
+    <a target="_blank" href="https://zenodo.org/" rel="noreferrer">Zenodo</a> by their owners. This means the results
+    can be cited
     with a <a target="_blank" href="https://www.doi.org/" rel="noreferrer">DOI</a>.
   </p>
 
