--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -15,11 +15,11 @@
     p-lg-10 p-lg-offset-1
     p-xl-8 p-xl-offset-2">
 
-    <div class="p-grid">
+    <div class="p-grid" style="justify-content: center">
 
       <!--  data column-->
-      <div class="p-md-6 p-col-12">
-        <p-panel header="Data" [toggleable]="true">
+      <div class="p-md-5 p-col-10">
+        <p-panel header="Data" [toggleable]="true" class="validation-small-row">
           <ng-template pTemplate="icons">
             <label class="p-panel-header-icon"
                    pTooltip="The soil moisture dataset which is to be validated, i.e. compared to the 'Reference' data."
@@ -40,7 +40,8 @@
 
               <ng-container *ngFor="let filter of item.basicFilters; let filterIdx = index">
                 <qa-basic-filter
-                  [ngClass]="isIncluded(filter.filterDto.id, item.basicFilters) == true ? 'ml-1' : ''"
+                  [ngClass]="{'ml-1': isIncluded(filter.filterDto.id, item.basicFilters)}"
+                  [isIncluded]="isIncluded(filter.filterDto.id, item.basicFilters)"
                   [filterModel]="filter"
                   (onExcludeMutual)="this.excludeFilter($event, item.basicFilters)"
                   (onIncludeMutual)="this.includeFilter($event, item.basicFilters, filter.enabled)">
@@ -49,10 +50,11 @@
 
               <div style="width: 100%;text-align: right">
                 <button pButton type="button"
+                        [disabled]="validationModel.datasetConfigurations.length < 2"
                         (click)="removeDataset(validationModel.datasetConfigurations[datasetIdx])"
                         label="Remove dataset"
                         icon="pi pi-trash"
-                        class="p-button-danger p-my-2"
+                        class="removeDataset p-button-danger p-my-2"
                         style="padding: 0.2rem;">
                 </button>
               </div>
@@ -64,7 +66,7 @@
                   label="Add dataset"
                   icon="pi pi-plus-circle"
                   (click)="addDatasetToValidate()"
-                  class="p-button-success p-my-2"
+                  class="addDataset p-button-success p-my-2"
                   style="padding: 0.2rem;"
                   [disabled]="addDatasetButtonDisabled()">
           </button>
@@ -73,8 +75,8 @@
       </div>
 
       <!--  reference column-->
-      <div class="p-md-6 p-col-12">
-        <p-panel header="Reference" [toggleable]="true">
+      <div class="p-md-5 p-col-10">
+        <p-panel header="Reference" [toggleable]="true" class="validation-small-row">
           <ng-template pTemplate="icons">
             <label class="p-panel-header-icon"
                    pTooltip="The data which is to be used as a reference in the validation. The 'Data' will be compared against this reference."
@@ -105,8 +107,8 @@
       </div>
 
       <!--      Map-->
-      <div class="p-col-12">
-        <p-panel toggleable="true" [header]="'Map'" styleClass="map-panel" collapsed="true">
+      <div class="p-col-10">
+        <p-panel toggleable="true" [header]="'Map'" styleClass="map-panel" collapsed="true" class="validation-row">
           <qa-map class="map" #qwerty
                   [spatialSubset]="validationModel.spatialSubsetModel"
                   [center]="[10, 52.5]"
@@ -116,36 +118,36 @@
       </div>
 
       <!--      Spatial subsetting-->
-      <div class="p-col-12">
+      <div class="p-col-10">
         <qa-spatial-subset [subsetModel]="validationModel.spatialSubsetModel"></qa-spatial-subset>
       </div>
 
 
       <!--      Validation period-->
-      <div class="p-col-12">
+      <div class="p-col-10">
         <qa-validation-period [validationPeriodModel]="validationModel.validationPeriodModel"></qa-validation-period>
       </div>
 
       <!--      Metrics-->
-      <div class="p-col-12">
+      <div class="p-col-10">
         <qa-metrics [validationModel]="validationModel"></qa-metrics>
       </div>
 
       <!--      Anomalies-->
-      <div class="p-col-12">
+      <div class="p-col-10">
         <qa-anomalies [anomaliesModel]="validationModel.anomalies"></qa-anomalies>
       </div>
 
       <!--      Scaling-->
-      <div class="p-col-12">
+      <div class="p-col-10">
         <qa-scaling [validationModel]="validationModel"></qa-scaling>
       </div>
 
       <!-- Name -->
-      <div class="p-col-12">
+      <div class="p-col-10">
         <div class="p-grid p-px-2">
             <span class="label p-col-1">
-              <label for="name">Name</label>
+              <label for="name">Name your validation</label>
             </span>
           <input class="form-field p-col"
                  id="name"
@@ -159,10 +161,10 @@
         </div>
       </div>
 
-      <div class="p-col-12">
+      <div class="p-col-10">
         <div>
           <div class="p-d-flex p-jc-center">
-            <p-button label="Validate" (onClick)="startValidation(true)"></p-button>
+            <p-button id="validateButton" label="Validate" icon="pi pi-play" (onClick)="startValidation(true)"></p-button>
           </div>
         </div>
       </div>
