--- a/UI/src/app/modules/metrics/components/metrics/metrics.component.html
+++ b/UI/src/app/modules/metrics/components/metrics/metrics.component.html
@@ -1,4 +1,4 @@
-<p-panel header="Metrics" [toggleable]="true">
+<p-panel header="Metrics" [toggleable]="true" class="validation-row">
   <ng-template pTemplate="icons">
     <label class="p-panel-header-icon"
            pTooltip="Specify metrics to calculate. Basic metrics between data set pairs are always calculated."
@@ -6,10 +6,14 @@
       <span class="pi pi-question-circle"></span>
     </label>
   </ng-template>
-  <div class="p-grid">
+  <div class="p-grid p-pt-3">
     <div class="p-col-12">
       <qa-metric [metricModel]="tripleCollocationMetrics"
-                 [disabled]="validationModel.datasetConfigurations.length<2"></qa-metric>
+                 [disabled]="checkIfDisabled('tcol')" (click)="switchOffBootstrap()"></qa-metric>
+    </div>
+    <div class="p-col-12">
+      <qa-metric [metricModel]="bootstrapTripleCollocationMetrics"
+                 [disabled]="checkIfDisabled('btcol')"></qa-metric>
     </div>
   </div>
 </p-panel>
