--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -14,7 +14,7 @@
     p-md-10 p-md-offset-1
     p-lg-10 p-lg-offset-1
     p-xl-8 p-xl-offset-2">
-
+<p>test paragraph</p>
     <div class="p-grid" style="justify-content: center">
 
       <!--  data column-->
