set password updated

--- a/UI/src/app/pages/set-password/set-password.component.html
+++ b/UI/src/app/pages/set-password/set-password.component.html
@@ -31,6 +31,10 @@
                        formControlName="password2">
                 <label for="password-confirm">Password confirmation</label>
               </span>
+              <div *ngIf="formErrors && formErrors.password"
+                   class="alert">
+                <span *ngFor="let error of formErrors.password">{{error}}<br></span>
+              </div>
             </div>
           </div>
 
