--- a/UI/src/app/pages/set-password/set-password.component.scss
+++ b/UI/src/app/pages/set-password/set-password.component.scss
@@ -15,3 +15,13 @@
 button{
   width: 12rem;
 }
+
+.alert{
+  background-color: #FF6C5C26;
+  color: #FF6C5C;
+  width: 20rem;
+  border: #FF6C5C30 solid 1px;
+  border-radius: 3px;
+  padding: 0.5rem;
+  text-align: left;
+}
