--- a/UI/src/app/pages/password-reset-validate-token/password-reset-validate-token.component.html
+++ b/UI/src/app/pages/password-reset-validate-token/password-reset-validate-token.component.html
@@ -1,1 +1,14 @@
-<p>password-reset-validate-token works!</p>
+<main *ngIf="!tokenValid" class="container-fluid">
+  <div class="center">
+    <div class="p-grid">
+
+      <div class="p-col" style="max-width: 40rem; margin: auto;">
+        <h1 class="h3 p-mt-5 p-mb-0 font-weight-normal">Invalid link</h1>
+
+        <p>The password reset link was invalid, possibly because it has already been used.
+          <br>
+          <a [routerLink]="'/password-reset'">Please request a new password reset.</a></p>
+      </div>
+    </div>
+  </div>
+</main>
