--- a/UI/src/app/pages/password-reset/password-reset.component.html
+++ b/UI/src/app/pages/password-reset/password-reset.component.html
@@ -5,19 +5,24 @@
       <div class="p-col" style="max-width: 20rem">
         <form [formGroup]="resetPasswordForm" class="text-center" (ngSubmit)="onSubmit()">
           <h1 class="h3 p-mt-5 p-mb-0 font-weight-normal">Password reset</h1>
-          <p>Forgotten your password? Enter your email address below, and we'll email instructions for setting a new one.</p>
+          <p>Forgotten your password? Enter your email address below, and we'll email instructions for setting a new
+            one.</p>
 
           <div class="p-fluid">
-          <span class="p-float-label p-mb-5">
-          <input class="form-field" pInputText
-                 type="email"
-                 [email]="true"
-                 pTooltip="The email address you registered your account with."
-                 formControlName="email"
-                 id="emailInput">
-          <label for="emailInput">Email</label>
+            <span class="p-float-label p-mb-5">
+            <input class="form-field" pInputText
+                   type="email"
+                   [email]="true"
+                   pTooltip="The email address you registered your account with."
+                   formControlName="email"
+                   id="emailInput">
+            <label for="emailInput">Email</label>
 
-        </span>
+            </span>
+            <div *ngIf="formErrors && formErrors.email"
+                 class="alert">
+              <span>{{formErrors.email[0]}}</span>
+            </div>
           </div>
 
           <button pButton
