--- a/UI/src/app/pages/password-reset/password-reset.component.scss
+++ b/UI/src/app/pages/password-reset/password-reset.component.scss
@@ -15,3 +15,14 @@
 button{
   width: 12rem;
 }
+
+.alert{
+  margin-bottom: 2rem;
+  background-color: #FF6C5C26;
+  color: #FF6C5C;
+  width: 18rem;
+  border: #FF6C5C30 solid 1px;
+  border-radius: 3px;
+  padding: 0.5rem;
+  text-align: left;
+}
