--- a/UI/src/app/pages/about/about.component.html
+++ b/UI/src/app/pages/about/about.component.html
@@ -1,18 +1,18 @@
 <main>
   <div id="introduction">
     <p>
-      <a href="https://www.ffg.at/en" rel="noreferrer">
+      <a href="https://www.ffg.at/en" rel="noreferrer" target="_blank">
         <img alt="FFG logo" id="logo_ffg" [src]="logoFfg"></a>
       The <b>QA4SM</b> project provides an operational online validation service for soil moisture products. It started
-      in May 2018 and is supported by the <a href="https://www.ffg.at/en">Austrian Research Promotion Agency
+      in May 2018 and is supported by the <a href="https://www.ffg.at/en" target="_blank">Austrian Research Promotion Agency
       (Österreichische Forschungsförderungsgesellschaft, FFG)</a> in the
-      <a href="https://www.ffg.at/en/program/austrian-space-applications-programme-0">Austrian Space Application
+      <a href="https://www.ffg.at/en/program/austrian-space-applications-programme-0" target="_blank">Austrian Space Application
         Programme</a>.
     </p>
 
     <p>
       <a href="https://www.esa.int/" target="_blank"><img alt="ESA logo" id="logo_esa" [src]="logoEsa"></a>
-      From 2021 on, QA4SM is further evolved within the <a href="https://www.geo.tuwien.ac.at/project-frm4sm/"
+      From 2021 on, QA4SM is further evolved within the <a href="https://project-frm4sm.geo.tuwien.ac.at/"
                                                            target="_blank">FRM4SM</a> project, supported by the <a
       href="https://www.esa.int/" target="_blank">European Space Agency</a>.
     </p>
@@ -32,7 +32,8 @@
         <b>TU Wien (Vienna University of Technology)</b><br>
         Department of Geodesy and Geoinformation<br>
         Research Group Climate and Environmental Remote Sensing (CLIMERS)<br>
-        Website: <a href="https://climers.geo.tuwien.ac.at/climers/research/quality-assurance/qa4sm/">https://climers.geo.tuwien.ac.at/climers/research/quality-assurance/qa4sm/</a><br>
+        Website: <a href="https://climers.geo.tuwien.ac.at/climers/research/quality-assurance/qa4sm/" target="_blank">
+        https://climers.geo.tuwien.ac.at/climers/research/quality-assurance/qa4sm/</a><br>
         Contact: Wouter Dorigo (wouter.dorigo (at) tuwien.ac.at)<br>
         Tasks: Scientific lead and research, dataset support
       </td>
@@ -45,7 +46,7 @@
       </td>
       <td>
         <b>AWST (Applied Science, Software and Technology)</b><br>
-        Website: <a href="https://www.awst.at">https://www.awst.at</a><br>
+        Website: <a href="https://www.awst.at" target="_blank">https://www.awst.at</a><br>
         Contact: Alexander Boresch (boresch (at) awst.at)<br>
         Tasks: Project management, technical lead, webservice development and operations
       </td>
