--- a/UI/src/app/pages/terms/terms.component.html
+++ b/UI/src/app/pages/terms/terms.component.html
@@ -8,7 +8,7 @@
 
   <p>
     The Quality Assurance for Soil Moisture (QA4SM) web service is developed by
-    <a href="https://www.geo.tuwien.ac.at/">TU Wien GEO</a> and <a href="https://www.awst.at/">AWST GmbH</a> with funding from the Austrian Space Applications Programme by <a href="https://www.ffg.at/">FFG</a>.
+    <a href="https://www.geo.tuwien.ac.at/" target="_blank">TU Wien GEO</a> and <a href="https://www.awst.at/" target="_blank">AWST GmbH</a> with funding from the Austrian Space Applications Programme by <a href="https://www.ffg.at/">FFG</a>.
     From 2021 on, the application is also supported by the <a href="https://www.esa.int/" target="_blank"> European Space Agency</a>.
     It aims to allow its users to validate soil moisture datasets in a traceable, transparent, reproducible and standardised fashion
     and to download the validation results for further use, for example in publications.<br/>
@@ -79,7 +79,7 @@
     <li>
       The individual datasets must be referenced using the guidance provided by the data providers. Links to the
       official websites of the
-      datasets currently supported by the service are listed in the <a routerLink="/datasets">datasets page</a>.
+      datasets currently supported by the service are listed in the <a routerLink="/datasets" target="_blank">datasets page</a>.
     </li>
   </ol>
 
