internal link fixed

--- a/UI/src/app/pages/terms/terms.component.html
+++ b/UI/src/app/pages/terms/terms.component.html
@@ -36,7 +36,7 @@
       Whenever results produced by the QA4SM web service are used for publication, the data's and the results' origin
       (i.e. the original data, reference data providers and the QA4SM webservice) must be acknowledged and referenced.
       A reference both to the QA4SM webservice and to all data providers for the study in question shall be provided.
-      <a href="#references">See reference section below.</a>
+      <a pageScroll [pageScrollDuration]="1" href="#references">See reference section below.</a>
     </li>
     <li>
       <b>User feedback:</b>
