--- a/UI/src/app/pages/validation-result/validation-result.component.html
+++ b/UI/src/app/pages/validation-result/validation-result.component.html
@@ -34,4 +34,5 @@
   <qa-publishing *ngIf="isPublishingWindowOpen" [validationId]="validationId"></qa-publishing>
 <!--  <div id="modal-container" class="hidden"></div>-->
 <!--  <div id="overlay" (click)="removeModal()" class="hidden"></div>-->
+  <qa-scroll-to-top></qa-scroll-to-top>
 </main>
