--- a/UI/src/app/modules/validation-result/components/result-files/result-files.component.html
+++ b/UI/src/app/modules/validation-result/components/result-files/result-files.component.html
@@ -1,5 +1,5 @@
-<div *ngIf="updatedMetrics$|async as metrics" class="p-grid p-mx-0">
-  <div *ngIf="metrics[indx] && metrics[indx].overviewFiles|async as overviewPlots" class="p-col-12">
+<div class="p-grid p-mx-0">
+  <div class="p-col-12">
     <p-panel>
       <ng-template pTemplate="header">
         <div class="text-center" style="width: 95%">
@@ -9,49 +9,53 @@
       <ng-template pTemplate="icons">
       </ng-template>
 
-      <div class="p-grid p-align-center">
-        <div [ngClass]="{'p-col-5': overviewPlots.length === 1, 'p-col-6': overviewPlots.length > 1}">
-          <img *ngIf="metrics[indx].boxplotFile|async as boxplot"
-               width="95%"
-               height="95%"
-               [src]="sanitizePlotUrl(boxplot[0].plot)"
-               (click)="showGallery(0, boxplot)"
-               [ngClass]="{'result-plot':true, 'pcol': overviewPlots.length > 4}"
-               alt="Boxplot for {{metrics[indx].metric_pretty_name}}">
-        </div>
-        <div class="p-col">
-          <div class="p-grid">
-            <div *ngFor="let plot of overviewPlots; let ind = index"
-                 [ngClass]="{'image-container': true,
+      <div *ngIf="updatedMetrics$|async as metrics">
+        <div *ngIf="metrics[indx] && metrics[indx].overviewFiles|async as overviewPlots">
+
+          <div class="p-grid p-align-center">
+            <div [ngClass]="{'p-col-5': overviewPlots.length === 1, 'p-col-6': overviewPlots.length > 1}">
+              <img *ngIf="metrics[indx].boxplotFile|async as boxplot"
+                   width="95%"
+                   height="95%"
+                   [src]="sanitizePlotUrl(boxplot[0].plot)"
+                   (click)="showGallery(0, boxplot)"
+                   [ngClass]="{'result-plot':true, 'pcol': overviewPlots.length > 4}"
+                   alt="Boxplot for {{metrics[indx].metric_pretty_name}}">
+            </div>
+            <div class="p-col">
+              <div class="p-grid">
+                <div *ngFor="let plot of overviewPlots; let ind = index"
+                     [ngClass]="{'image-container': true,
                              'p-col': overviewPlots.length === 1,
                              'p-col-10': overviewPlots.length === 2,
                              'p-col-6': overviewPlots.length > 2}">
               <span class="image-label">
                 {{metrics[indx].datasets[ind]}}
               </span>
-              <img width="95%" height="95%"
-                   [src]="sanitizePlotUrl(plot.plot)"
-                   (click)="showGallery(ind, overviewPlots)"
-                   [ngClass]="{'result-plot':true, 'pcol': true}"
-                   alt="An Overview map for {{metrics[indx].metric_pretty_name}}">
+                  <img width="95%" height="95%"
+                       [src]="sanitizePlotUrl(plot.plot)"
+                       (click)="showGallery(ind, overviewPlots)"
+                       [ngClass]="{'result-plot':true, 'pcol': true}"
+                       alt="An Overview map for {{metrics[indx].metric_pretty_name}}">
+                </div>
+              </div>
             </div>
+
           </div>
-        </div>
 
-      </div>
-
-      <div class="p-grid">
-        <div class="p-col-3 px-0 center p-mt-3">
-          <button pButton
-                  type="button"
-                  icon="pi pi-download"
-                  class="btn-action-large"
-                  label="Download graphs"
-                  title="Download graphs .zip"
-                  (click)="downloadResultFile(validation.id, 'graphics',validation.id + '_graphs.zip')">
-          </button>
         </div>
-        <div class="p-col">
+        <div class="p-grid">
+          <div class="p-col-3 px-0 center p-mt-3">
+            <button pButton
+                    type="button"
+                    icon="pi pi-download"
+                    class="btn-action-large"
+                    label="Download graphs"
+                    title="Download graphs .zip"
+                    (click)="downloadResultFile(validation.id, 'graphics',validation.id + '_graphs.zip')">
+            </button>
+          </div>
+          <div class="p-col">
           <span class="p-float-label p-mb-4 p-mt-3">
             <p-dropdown id="metricSelector"
                         (onChange)="onMetricChange()"
@@ -61,19 +65,21 @@
                         [style]="{'width': '100%'}">
             </p-dropdown>
           </span>
-        </div>
-        <div class="p-col-3 px-0 p-mt-3 center">
-          <button pButton
-                  type="button"
-                  class="btn-action-large"
-                  icon="faIcons.faFileDownload"
-                  label="Download NetCDF"
-                  title="Download all results in NetCDF format"
-                  (click)="downloadResultFile(validation.id, 'netCDF', validation.output_file_name)">
-            <span><fa-icon [icon]="faIcons.faFileDownload"></fa-icon></span>
-          </button>
+          </div>
+          <div class="p-col-3 px-0 p-mt-3 center">
+            <button pButton
+                    type="button"
+                    class="btn-action-large"
+                    icon="faIcons.faFileDownload"
+                    label="Download NetCDF"
+                    title="Download all results in NetCDF format"
+                    (click)="downloadResultFile(validation.id, 'netCDF', validation.output_file_name)">
+              <span><fa-icon [icon]="faIcons.faFileDownload"></fa-icon></span>
+            </button>
+          </div>
         </div>
       </div>
+
 
     </p-panel>
   </div>
