--- a/UI/src/app/pages/home/home.component.html
+++ b/UI/src/app/pages/home/home.component.html
@@ -18,7 +18,7 @@
         <div class="textbox p-mb-3">
           <h1 class="carousel-desc">Quality Assurance for Soil Moisture</h1>
           <h3 class="carousel-desc d-sm-block">
-            Validation of satellite soil moisture products <br/>
+            Validation of satellite soil moisture products <br>
             against in-situ and model reference data
           </h3>
         </div>
