password confirmation error field retrieved

--- a/UI/src/app/modules/user/user-form/user-form.component.html
+++ b/UI/src/app/modules/user/user-form/user-form.component.html
@@ -41,6 +41,10 @@
                 class="pi pi-question-circle">
           </span>
         </span>
+        <div *ngIf="formErrors && formErrors.password2"
+             class="alert">
+          <span *ngFor="let error of formErrors.password2">{{error.message}}<br></span>
+        </div>
       </div>
 
       <div class="p-py-3">
