--- a/UI/src/app/pages/help/help.component.html
+++ b/UI/src/app/pages/help/help.component.html
@@ -1,11 +1,11 @@
 <main>
   <h1 class="h3 p-mb-3 font-weight-normal">Go to section</h1>
   <p>
-    <a pageScroll [pageScrollDuration]="1" href="#validation">Validate Page</a><br/>
-    <a pageScroll [pageScrollDuration]="1" href="#results_list">My Validations - Results List Page</a><br/>
-    <a pageScroll [pageScrollDuration]="1" href="#results">Validation Results Page</a><br/>
-    <a pageScroll [pageScrollDuration]="1" href="#publication">Publication</a><br/>
-    <a pageScroll [pageScrollDuration]="1" href="#published">Published Validations Page</a><br/>
+    <a pageScroll="" [pageScrollDuration]="1" href="#validation">Validate Page</a><br/>
+    <a pageScroll="" [pageScrollDuration]="1" href="#results_list">My Validations - Results List Page</a><br/>
+    <a pageScroll="" [pageScrollDuration]="1" href="#results">Validation Results Page</a><br/>
+    <a pageScroll="" [pageScrollDuration]="1" href="#publishing">Publishing</a><br/>
+    <a pageScroll="" [pageScrollDuration]="1" href="#published">Published Validations Page</a><br/>
   </p>
 
   <a id="manual"></a>
@@ -32,7 +32,7 @@
   <p>
     <b>Step 1</b> - Choose the data you would like to validate - including the dataset name, the version of the dataset,
     and one of the soil moisture variables provided in the dataset. All the supported datasets are listed on
-    <a routerLink="/datasets" pageScroll [pageScrollDuration]="1" target="_blank">datasets page here</a>.
+    <a routerLink="/datasets" pageScroll="" [pageScrollDuration]="1" target="_blank">datasets page here</a>.
   </p>
   <div>
     <img alt="dataset selection" class="scaled_image" [src]="datasetSelections">
@@ -42,12 +42,12 @@
     The filters available depend on the data contained within the chosen dataset. For example,
     you can filter the C3S data to include only data with no inconsistencies detected (flag = 0).
     Details of the filter options provided for each dataset are given on the
-    <a routerLink="/datasets" pageScroll [pageScrollDuration]="1" target="_blank">supported datasets page</a>. You can also
+    <a routerLink="/datasets" pageScroll="" [pageScrollDuration]="1" target="_blank">supported datasets page</a>. You can also
     hover your mouse pointer over the question mark next to a filter to get a short explanation.
   </p>
   <p>
     <b>Step 3 [optional]</b> - If you want to intercompare several datasets, you can add more datasets to the validation
-    using the <b>+</b> button, up to a maximum of five. Configure the settings for the additional datasets by selecting
+    using the <b>Add dataset</b> button, up to a maximum of five. Configure the settings for the additional datasets by selecting
     the respective tab and repeating steps 1 and 2 above.<br/>
   </p>
   <p class="alert alert-info">
@@ -78,6 +78,28 @@
     running the validation. The filters available depend on the data contained within the chosen dataset. For example,
     you can filter the ISMN data to include only data points where the soil_moisture_flag is &quot;G&quot; for &quot;good&quot;.
     You can also hover your mouse pointer over the question mark next to a filter
+    to get a short explanation. <br>
+    <span style="color: red">
+    If the reference dataset is ISMN you can also choose specific networks and/or measurements in a defined depth range.
+    To do that you have to open an appropriate window by clicking a 'select...' link next to the filter you want to parameterised.
+    </span>
+  </p>
+  <img  alt='ismn networks' class="scaled_image mb-3" [src]="ismnNetworks">
+  <p style="color: red">
+    The window for choosing networks contains a list of continents. When clicking a continent name a list of networks that belong to the continent unfolds.
+    Next to each network there is the name of the country it belongs to. To toggle the particular network it is enough to click on its name.
+    The choice has to be approved by clicking the 'Use networks' button.
+  </p>
+  <img alt="ismn depths" class="scaled_image mb-3" [src]="ismnDepths">
+  <p>
+    <span style="color: red">
+    The window for the depth selection contains two fields for introducing the depth range.
+    Again, the choice has to be accepted by clicking the 'Use depth range' button.
+    </span>
+    <br>
+    <br>
+    Details of the filter options provided for each dataset are given on the supported datasets page
+    <a routerLink="/datasets">here</a>. You can also hover your mouse pointer over the question mark next to a filter
     to get a short explanation.
   </p>
   <p>
@@ -103,7 +125,7 @@
   <p>
     <b>Step 7 [optional]</b> - Chose the geographic area over which the validation should be performed. You can either
     specify a lat/lon bounding
-    box directly or you can select the area on a map by clicking the globe button. The trash button will clear all four
+    box directly or you can select the area on a map. The trash button will clear all four
     bounding
     box fields.<br/>
     If you don't specify an area, a global validation will be done.
@@ -115,24 +137,26 @@
   <p>
     <b>Step 8 [optional]</b> - Choose the date range over which the validation should be performed. Accepted formats
     are: YYYY*MM*DD
-    or DD*MM*YYYY where * can be any of &quot;.&quot;, &quot;/&quot; or &quot;-&quot;. If you don't provide a period it
+    or DD*MM*YYYY where * can be any of &quot;.&quot;, &quot;/&quot; or &quot;-&quot;. If you leave the fields empty, the validation period
     will be
     implicitly determined through temporal matching of the data and reference selected. For the time range covered by
     the various
-    datasets, see the <a routerLink="/datasets" pageScroll [pageScrollDuration]="1" target="_blank">datasets page</a>.
+    datasets, see the <a routerLink="/datasets" pageScroll="" [pageScrollDuration]="1" target="_blank">datasets page</a>.
   </p>
   <div>
     <img alt="validation period" class="scaled_image p-mb-3" [src]="validationPeriod">
   </div>
   <p>
-    <b>Step 9 [optional]</b> - Activate Triple Collocation Analysis (TC). By default, QA4SM calculates validation
+    <b>Step 9 [optional]</b> - Activate Triple Collocation Analysis (TC) and Bootstrapping Triple Collocation confidence intervals (BTC). By default, QA4SM calculates validation
     metrics between dataset pairs (the reference and each candidate data set). If more than 3 datasets
     are selected (including the reference), the switch to activate TC becomes available. If
     TC is selected, in addition to the basic metrics between dataset pairs, TC metrics between
     triples of selected datasets are calculated. The reference is included in all triples and
     metrics are found for all candidate datasets. Note that each TC metric is specific to a dataset
     (this is evident from the metric name). TC metrics are affected by all 3 used datasets. Only results from TC with
-    independent datasets should be used.
+    independent datasets should be used. <br><br>
+    The bootstrapping option is enabled only if TC is selected.
+    When it is chosen confidence intervals are calculated via bootstrapping with 1000 repetitions, however the validation time might be up to 5 times longer.
   </p>
   <div>
     <img alt="triple collocation" class="scaled_image p-mb-3" [src]="tca">
@@ -218,7 +242,7 @@
   <ul>
     <li>
       <span class="pi pi-folder-open"></span> You can access the
-      <a pageScroll [pageScrollDuration]="1" href="#results">results details page</a>
+      <a pageScroll="" [pageScrollDuration]="1" href="#results">results details page</a>
       of a validation through its folder button.
     </li>
     <li>
@@ -303,7 +327,7 @@
       file to <a target="_blank" href="https://zenodo.org/" rel="'noreferrer">Zenodo</a>. This means the results can be
       cited
       with a <a target="_blank" href="https://www.doi.org/" rel="'noreferrer">DOI</a>. See section
-      <a pageScroll [pageScrollDuration]="1" href="#publication">Publication</a> for details.
+      <a pageScroll="" [pageScrollDuration]="1" href="#publishing">Publishing</a> for details.
     </li>
   </ul>
 
@@ -405,7 +429,7 @@
     <img alt="results graphs" class="scaled_image p-mb-3" [src]="resultsGraphs">
   </div>
 
-  <h2 id="publication" class="h4 p-mb-3 font-weight-normal">Publication</h2>
+  <h2 id="publishing" class="h4 p-mb-3 font-weight-normal">Publishing</h2>
 
   <p>
     This feature allows you to publish the result NetCDF file of your validation to
@@ -416,7 +440,7 @@
     which you can cite in your publications to give your readers open access to your data.
   </p>
   <div>
-    <img alt="publication dialog" class="scaled_image p-mb-3" [src]="publicationDialog">
+    <img alt="publishing dialog" class="scaled_image p-mb-3" [src]="publishingDialog">
   </div>
 
   <p>
@@ -444,7 +468,7 @@
         deleted - see also <a href="https://help.zenodo.org/" target="_blank"
                               rel="noreferrer">Zenodo's FAQ</a>.</span><br/>
 
-    If you prefer to use your own Zenodo account, you can of course do so - the QA4SM publication feature is just
+    If you prefer to use your own Zenodo account, you can of course do so - the QA4SM publishing feature is just
     for convenience. Just download the NetCDF result file and upload it yourself through Zenodo's submission process
     with your own account. We'd ask you to use 'qa4sm' as one of the keywords so that we can easily find all QA4SM
     results on Zenodo with a keyword search.
